Added basic page layout, CSS and JS
Added basic page layout and js to change background on clicks

--- a/index.html
+++ b/index.html
@@ -2,8 +2,30 @@
 <html>
 <head>
 	<title>Krangstudie</title>
+	<link rel="stylesheet" href="css/style.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="js/krang.js"></script>
 </head>
-<body>
-
+<body id="page" class="brainb">
+<div class="container">
+	<div class="row">
+		<h1 class="title">krangstudie</h1>
+	</div>
+	<div class="row">
+		<h2 class="brain">brain</h1>
+	</div>
+	<div class="row">
+		<h2 class="torso">torso</h1>
+	</div>
+	<div class="row">
+		<h2 class="clothing">clothing</h1>
+	</div>
+	<div class="row">
+		<h2 class="armor">armor</h1>
+	</div>
+	<div class="row">
+		<h2 class="neuro">neurocranium</h1>
+	</div>
+</div>
 </body>
 </html>
