Add smaller pictures and links to pages

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 	<div class="row">
 		<h2 class="neuro">neurocranium</h1>
 	</div>
+	<div class="link">
+		<a href="pages/kpic.html">krictures</a>
+	</div>
 </div>
 </body>
 </html>
