--- a/pages/kpic.html
+++ b/pages/kpic.html
@@ -3,46 +3,54 @@
 <head>
 	<title>kpic</title>
 	<link rel="stylesheet" href="../css/style.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="js/krang.js"></script>
 </head>
-<body>
+<body class="brainb">
 	<div class="container">
+		<div>
+			<h1>Krictures</h1>
+		</div>
 		<div class="row kpics">
 			<div class="pics">
-				<img src="../images/krang1.jpg">
+				<img src="../images/krang1-265_large_1x.jpg">
 			</div>
 			<div class="pics">
-				<img src="../images/krang2.jpg">
+				<img src="../images/krang2-265_large_1x.jpg">
 			</div>
 			<div class="pics">
-				<img src="../images/krang3.jpg">
+				<img src="../images/krang3-265_large_1x.jpg">
 			</div>
 			<div class="pics">
-				<img src="../images/krang4.jpg">
+				<img src="../images/krang4-265_large_1x.jpg">
 			</div>
 			<div class="pics">
-				<img src="../images/krang5.jpg">
+				<img src="../images/krang5-265_large_1x.jpg">
 			</div>
 			<div class="pics">
-				<img src="../images/krang6.jpg">
+				<img src="../images/krang6-265_large_1x.jpg">
 			</div>
 			<div class="pics">
-				<img src="../images/krang7.jpg">
+				<img src="../images/krang7-265_large_1x.jpg">
 			</div>
 			<div class="pics">
-				<img src="../images/krang8.jpg">
+				<img src="../images/krang8-265_large_1x.jpg">
 			</div>
 			<div class="pics">
-				<img src="../images/krang9.jpg">
+				<img src="../images/krang9-265_large_1x.jpg">
 			</div>
 			<div class="pics">
-				<img src="../images/krang10.jpg">
+				<img src="../images/krang10-265_large_1x.jpg">
 			</div>
 			<div class="pics">
-				<img src="../images/krang11.jpg">
+				<img src="../images/krang11-265_large_1x.jpg">
 			</div>
 			<div class="pics">
-				<img src="../images/krang12.jpg">
+				<img src="../images/krang12-265_large_1x.jpg">
 			</div>
+		</div>
+		<div class="link">
+			<a href="../index.html">home</a>
 		</div>
 			
 	</div>
