Changed links names and font size

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body id="page" class="brainb">
 <div class="container">
 	<div class="row">
-		<h1 class="title">krangstudie</h1>
+		<h1 class="title">krangstudie I</h1>
 	</div>
 	<div class="row">
 		<h2 class="brain">brain</h1>
@@ -27,7 +27,7 @@
 		<h2 class="neuro">neurocranium</h1>
 	</div>
 	<div class="link">
-		<a href="pages/kpic.html">krictures</a>
+		<a href="pages/kpic.html">krangstudie II</a>
 	</div>
 </div>
 </body>
