--- a/pages/kpic.html
+++ b/pages/kpic.html
@@ -9,7 +9,7 @@
 <body class="brainb">
 	<div class="container">
 		<div>
-			<h1>Krictures</h1>
+			<h1>krangstudie II</h1>
 		</div>
 		<div class="row kpics">
 			<div class="pics">
@@ -50,7 +50,7 @@
 			</div>
 		</div>
 		<div class="link">
-			<a href="../index.html">home</a>
+			<a href="../index.html">krangstudie I</a>
 		</div>
 			
 	</div>
