Add border radius and new js version
js now acts on css property not adding and removing class

--- a/pages/kpic.html
+++ b/pages/kpic.html
@@ -4,7 +4,7 @@
 	<title>kpic</title>
 	<link rel="stylesheet" href="../css/style.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="js/krang.js"></script>
+	<script src="../js/krang.js"></script>
 </head>
 <body class="brainb">
 	<div class="container">
